--- a/blog.html
+++ b/blog.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blog de prueba</title>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <header>
         <hl>blog de prueba</hl>
+        <p>prueba prueba prueba</p>
     </header>
 
     <section>
         <article>
-            <h2>primer artiulo</h2>
+            <h2 id="tittle2">primer artiulo</h2>
             <p>subtitulo 1</p>
             <img src="img/download.jpg" width="200" height="200" alt="aqui va un gato">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, vitae dolores eaque optio odio debitis ad, molestiae accusamus quos voluptas provident quam doloribus similique ab voluptates eveniet iusto expedita iure.</p>
+            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, vitae dolores eaque optio odio debitis ad, molestiae accusamus quos voluptas provident quam doloribus similique ab voluptates eveniet iusto expedita iure.</p>
         </article>
 
         <article>
             <h2>segundo artiulo</h2>
             <p>subtitulo 1</p>
             <img src="img/download.jpg" width="200" height="200" alt="aqui va un gato">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, vitae dolores eaque optio odio debitis ad, molestiae accusamus quos voluptas provident quam doloribus similique ab voluptates eveniet iusto expedita iure.</p>
+            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, vitae dolores eaque optio odio debitis ad, molestiae accusamus quos voluptas provident quam doloribus similique ab voluptates eveniet iusto expedita iure.</p>
             
         </article>
 
@@ -30,7 +32,7 @@
             <h2>tercer artiulo</h2>
             <p>subtitulo 1</p>
             <img src="img/download.jpg" width="200" height="200" alt="aqui va un gato">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, vitae dolores eaque optio odio debitis ad, molestiae accusamus quos voluptas provident quam doloribus similique ab voluptates eveniet iusto expedita iure.</p>
+            <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, vitae dolores eaque optio odio debitis ad, molestiae accusamus quos voluptas provident quam doloribus similique ab voluptates eveniet iusto expedita iure.</p>
             
         </article>
     </section>
